# margo-sfq

./: LICENSE  README.md  pyproject.toml
checkpoints/: netlist_surrogate_medium.pt
data/: corpus_medium_n250.jsonl
margo/: __init__.py  and2.py  builders.py  cell_problems.py  comparator.py  corpus.py  gensearch.py  graph_features.py  search_accel.py  surrogate.py  train_netlist_surrogate.py
margo/netlist/: __init__.py  drc.py  emitter.py  graph.py  josim_parse.py  parser.py  units.py  verifier.py
