[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "margo-sfq"
version = "0.1.0"
description = "Margin analysis and inverse design for superconducting (SFQ) logic cells."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["numpy"]

[project.optional-dependencies]
ml = ["torch"]

[tool.setuptools.packages.find]
include = ["margo*"]
